--- a/DispatchSDK/.swiftpm/xcode/xcshareddata/xcschemes/DispatchSDK.xcscheme
+++ b/DispatchSDK/.swiftpm/xcode/xcshareddata/xcschemes/DispatchSDK.xcscheme
@@ -29,6 +29,18 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "DispatchSDKTests"
+               BuildableName = "DispatchSDKTests"
+               BlueprintName = "DispatchSDKTests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
